			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.04e: *********************************

BUG: (2/13/06, DN) Regression fails, because projects settings from disk files are not reconciled.
FIX: In LayoutLib.openLibraryForRead call readLibrary with "quick=false".

BUG: (2/13/06, SMR) Curved arcs are not selectable after being read.
FIX: In ArcInst.addVar(), check for curvature variables and update geometry.

BUG: (2/13/06, SMR) Compaction loops infinitely (Bug #813).
FIX: In Compaction.java, compare motion amounts against epsilon, not zero.

BUG: (2/13/06, SMR) Arcs with no angle increment are always drawn horizontally.
FIX: In InteractiveRouter.getClosestAngledPoint(), handle 0 degrees specially.
     In RouteElementArc.addHighlightArea(), use more general code.

BUG: (2/13/06, SMR) Attributes dialog loses the selected variable name when new valeus are typed.
FIX: In Highlighter.java, fire highlight changes only for the main highligher (not the
     mouse-over or ruler highlighters).  Also in Attributes.java, remember the selected variable.

BUG: (2/10/06, GVG) Fixing error in DRC schematics due to the adding of Variables during examing job (Bug #814).
FIX: Collect variables and then later kick a DRCUpdate job.

BUG: (2/10/06, DN) MOSSIM regression results are not determenistc.
FIX: Make "Topology.SortNetsByName" comparator transitive.

BUG: (2/10/06, DN) Project settings are not loaded from disk libraries.
FIX: Remove "meaning = null" int Pref.init* methods. 

IMP: (2/9/06, DN) Fixes in Compaction and Generation regressions to run in client/server mode.

IMP: (2/9/06, SMR) GDS input no longer complains about text layers, creates good size text.

IMP: (2/9/06, SMR) Fixed "RouteElementArc.doAction()" to make zero-length arcs go
     in the right direction.

IMP: (2/8/06, SMR) Split "Preferences" into "Preferences" and "Project Settings".
