@@ -43,6 +43,7 @@ import com.sun.electric.technology.Technology;
 import com.sun.electric.technology.technologies.Artwork;
 import com.sun.electric.technology.technologies.Generic;
 import com.sun.electric.technology.technologies.Schematics;
+import com.sun.electric.tool.Job;
 import com.sun.electric.tool.io.input.LibraryFiles;
 import com.sun.electric.tool.project.Project;
 import com.sun.electric.tool.user.menus.MenuCommands;
@@ -514,7 +515,8 @@ public class CircuitChanges
 	{
 		// delete random references to this cell
 		Library lib = cell.getLibrary();
-		if (cell == lib.getCurCell()) lib.setCurCell(null);
+		if (cell == Job.getUserInterface().getCurrentCell(lib))
+			Job.getUserInterface().setCurrentCell(lib, null);
 
 		// close windows that reference this cell
 		for(Iterator<WindowFrame> it = WindowFrame.getWindows(); it.hasNext(); )
